<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical">

    <EditText
        android:inputType="text"
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_first_name"
        android:textSize="17sp" />

    <EditText
        android:inputType="text"
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_last_name"
        android:textSize="17sp" />

    <EditText
        android:inputType="text"
        android:id="@+id/is_naughty"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_is_naughty"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/birthDate"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_birth_date"
        android:textSize="17sp" />

    <EditText
        android:inputType="text"
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_street"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/city"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_city"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/province"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_province"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_postal_code"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/country"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_country"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/latitude"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_latitude"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/longitude"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="5dp"
        android:hint="@string/child_longitude"
        android:textSize="17sp" />


</LinearLayout>